--- a/styles/pages/image-slider.css
+++ b/styles/pages/image-slider.css
@@ -1,1 +1,42 @@
-/* No CSS *//*# sourceMappingURL=image-slider.css.map */
+.main-container {
+  border: 1px solid black;
+  width: 900px;
+  height: 900px;
+  position: relative;
+}
+
+.main-container .img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-size: 900px 100%;
+}
+
+.main-container .background-img {
+  background-image: url("../images/colors-modified.jpg");
+}
+
+.main-container .foreground-img {
+  background-image: url("../images/colors.jpg");
+}
+
+.main-container #slider {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  -webkit-appearance: none;
+  background: transparent;
+}
+
+.main-container #slider::-webkit-slider-thumb {
+  cursor: pointer;
+  -webkit-appearance: none;
+  height: 15px;
+  width: 15px;
+  border: 1px solid black;
+  border-radius: 50%;
+  background: white;
+}
+/*# sourceMappingURL=image-slider.css.map */
