--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,7 @@ body {
 
 .main-container .foreground-img {
   background-image: url("../images/colors.jpg");
+  border-right: 3px solid white;
 }
 
 .main-container #slider {
