--- a/styles/pages/image-slider.scss
+++ b/styles/pages/image-slider.scss
@@ -1,9 +1,9 @@
 .main-container {
-	border: 1px solid black;
+	border: 1px solid var(--main-border-color);
 	width: 900px;
 	height: 900px;
 	position: relative;
-
+	
 	.img {
 		position: absolute;
 		top: 0;
@@ -28,13 +28,13 @@
 		height: 100%;
 		-webkit-appearance: none;
 		background: transparent;
+		cursor: pointer;
 
 		&::-webkit-slider-thumb {
-			cursor: pointer;
 			-webkit-appearance: none;
 			height: 15px;
 			width: 15px;
-			border: 1px solid black;
+			border: 1px solid $main-border-color;
 			border-radius: 50%;
 			background: white;
 		}
